Updates to support JDK 11 and initial PMD fixes